@@ -58,6 +58,7 @@ Version 0.0.4b (in progress)
 * [Fixed] Raw html was not passed properly to generate_psss_team_rosters function.
 * [Fixed] Stats not updating when run as a scheduled task.
 * [Fixed] Errors when attempting to access division.php directly.
+* [Removed] "Final" check to see if stats have already been updated.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
